[gd_scene load_steps=4 format=3 uid="uid://bfmadixfqavsa"]

[ext_resource type="Script" path="res://light.gd" id="1_2u12y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7kmp"]
size = Vector2(96, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2v2al"]
size = Vector2(96, 88)

[node name="Light" type="StaticBody2D"]
script = ExtResource("1_2u12y")

[node name="lit" type="Polygon2D" parent="."]
visible = false
color = Color(0.7287, 0.302461, 0.283893, 1)
polygon = PackedVector2Array(0, 0, 96, 0, 96, 88, 0, 88)

[node name="unlit" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 96, 0, 96, 88, 0, 88)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(48, 44)
shape = SubResource("RectangleShape2D_p7kmp")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(48, 44)
shape = SubResource("RectangleShape2D_2v2al")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
